refactor(verification): telephone verification process and related services updated tests